# cub3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  access_pixels_in_texture.c  cub3D  file.c  file.txt  sprite_didar.c  testmap.cub  testmap.txt
incl/: bonus.h  cub3D.h  errors.h  gui.h  hooks.h  raycasting.h  struct.h  tools.h
lib/get_next_line/: Makefile
lib/minilibx/: Makefile  libmlx42.a.FtjpjC
lib/minilibx/include/MLX42/: MLX42_Int.h
lib/my_libvector/: Makefile  a.out  libvector.h  linear_transformation2d.c  rotate_vector.c
lib/my_vector/: Makefile  a.out  linear_transformation2d.c  my_vector.h
maps/: 500.cub  map.cub  map2.cub  map3.cub  testmap.cub
src/: destructor.c  error_printer.c  main.c  message_printer.c
src/bonus/: bonus_initializer.c  collisions_checker.c  sprite.c  sprite_xcalculator.c
src/bonus/minimap/: collisions_checker.c  draw_player.c  minimap.c  offset_setter.c  wall_drawer.c
src/hooks_and_events/: hooks_catcher.c  key_hooks.c  mouse_hooks.c  movement_hooks.c  rotation_hooks.c
src/initializer/: initializer.c  map_objects.c  mlx_initializer.c
src/parser/: color_extracter.c  colors_parser.c  floor_ceiling_parser.c  map_parser.c  parser.c  textures_parser.c
src/parser/map_parser/: arguments_checker.c  map_borders_checker.c  map_checker.c  map_creator.c  map_parser.c  map_player_parser.c  map_void_checker.c
src/raycasting/: dda_initializer.c  delta_calculator.c  file2.c  file2_reference.c  first_ray.c  hit_checker.c  raycaster.c  raycaster_clean.c  rays_minimap.c  render.c  render_crazy_old_faulty.c  texture_painter.c  texture_xcalculator.c
src/tools/: ft_abs_dbl.c  ft_atoi.c  ft_degree_to_radian.c  ft_free_all_and_exit.c  ft_free_split.c  ft_isdigit.c  ft_itoa.c  ft_rgb_atoi.c  ft_split.c  ft_splitlen.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strtrim.c
textures/: key.xpm  key.xpm42
